--- a/_analysis_data.ipynb
+++ b/_analysis_data.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -212,11 +212,11 @@
       "Num of video:  18400\n",
       "Num of video:  18500\n",
       "     video_id  group  one_min_session current_moderation_type  \\\n",
-      "0  2021489975      1                1                    None   \n",
-      "1  2021489975      1                2                    None   \n",
-      "2  2021489975      1                3                    None   \n",
-      "3  2021489975      1                4                    None   \n",
-      "4  2021489975      1                5                    None   \n",
+      "0  2021489975      1                1                     NaN   \n",
+      "1  2021489975      1                2                     NaN   \n",
+      "2  2021489975      1                3                     NaN   \n",
+      "3  2021489975      1                4                     NaN   \n",
+      "4  2021489975      1                5                     NaN   \n",
       "\n",
       "    first_moderation_type  total_moderation_count  \\\n",
       "0  Educational Moderation                       0   \n",
@@ -233,18 +233,18 @@
       "4  Yeah sadly can't play it on stream Not suppose...           8      1    3   \n",
       "\n",
       "   ...  Density ViewerNet_GCC  ViewerNet_ClusteringCoefficient  \\\n",
-      "0  ...  0.00000           1.0                              0.0   \n",
-      "1  ...  0.00000           1.0                              0.0   \n",
-      "2  ...  0.00000           1.0                              0.0   \n",
-      "3  ...  0.00000           1.0                              0.0   \n",
-      "4  ...  0.02381           1.0                              0.0   \n",
+      "0  ...  0.00000             1                              0.0   \n",
+      "1  ...  0.00000             1                              0.0   \n",
+      "2  ...  0.00000             1                              0.0   \n",
+      "3  ...  0.00000             1                              0.0   \n",
+      "4  ...  0.02381             1                              0.0   \n",
       "\n",
       "   ViewerNet_AvgDegreeCentrality  ViewerNet_Connectivity  ViewerNet_Density  \\\n",
-      "0                            0.0                     0.0                0.0   \n",
-      "1                            0.0                     0.0                0.0   \n",
-      "2                            0.0                     0.0                0.0   \n",
-      "3                            0.0                     0.0                0.0   \n",
-      "4                            0.0                     0.0                0.0   \n",
+      "0                            0.0                       0                0.0   \n",
+      "1                            0.0                       0                0.0   \n",
+      "2                            0.0                       0                0.0   \n",
+      "3                            0.0                       0                0.0   \n",
+      "4                            0.0                       0                0.0   \n",
       "\n",
       "   total_punimod_count  total_edumod_count  current_punimod_count  \\\n",
       "0                    0                   0                      0   \n",
@@ -853,27 +853,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "# pearson correlation\n",
+    "column_list = dataframes[0].columns.tolist()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "CCM() got an unexpected keyword argument 'dataX'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[1;32mC:\\Users\\TINKY2~1\\AppData\\Local\\Temp/ipykernel_13168/3269329602.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[0mY\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mdataframes\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;34m'chat_count'\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 5\u001B[1;33m \u001B[0mccm_result\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mpyEDM\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mCCM\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdataX\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mX\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdataY\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mY\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mlibSizes\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m10\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m20\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m50\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mtau\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      6\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mccm_result\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mTypeError\u001B[0m: CCM() got an unexpected keyword argument 'dataX'"
-     ]
+     "data": {
+      "text/plain": "Index(['video_id', 'group', 'one_min_session', 'current_moderation_type',\n       'first_moderation_type', 'total_moderation_count',\n       'chat_content_concat', 'chat_count', 'month', 'day', 'day_of_week',\n       'time_of_day', 'new_followers', 'new_subscription', 'new_support',\n       'new_bits', 'new_VIP', 'welcome_back', 'new_lurk', 'new_raid',\n       'total_broadcaster_messages', 'total_moderator_messages',\n       'total_bot_moderator_messages', 'total_bot_otherengage_messages',\n       'total_human_moderator_messages', 'total_partner_messages',\n       'total_founder_messages', 'total_vip_messages',\n       'total_subscriber_messages', 'total_sub_gifer_messages',\n       'total_sub_gift_leader_messages', 'total_bits_messages',\n       'total_bits_leader_messages', 'total_bits_charity_messages',\n       'total_premium_messages', 'total_turbo_messages',\n       'total_moments_messages', 'total_hype_train_messages',\n       'total_glhf_pledge_messages', 'total_no_video_messages',\n       'total_no_audio_messages', 'total_identity_badges_messages',\n       'total_contribution_badges_messages', 'total_event_badges_messages',\n       'total_interaction_badges_messages', 'total_badges_messages',\n       'mention_count', 'current_moderation_count', 'bot moderator',\n       'unique_user_count', 'unique_broadcaster_count',\n       'unique_moderator_count', 'unique_bot_moderator_count',\n       'unique_bot_engager_count', 'unique_human_moderator_count',\n       'unique_partner_count', 'unique_founder_count', 'unique_vip_count',\n       'unique_subscriber_count', 'unique_sub_gifer_count',\n       'unique_sub_gift_leader_count', 'unique_bits_count',\n       'unique_bits_leader_count', 'unique_bits_charity_count',\n       'unique_premium_count', 'unique_turbo_count', 'unique_moments_count',\n       'unique_hype_train_count', 'unique_glhf_pledge_count',\n       'unique_no_video_count', 'unique_no_audio_count',\n       'unique_identity_badges_count', 'unique_contribution_badges_count',\n       'unique_event_badges_count', 'unique_interaction_badges_count',\n       'unique_badges_count', 'GCC', 'ClusteringCoefficient',\n       'AvgDegreeCentrality', 'AvgDegreeCentralityViewer', 'Connectivity',\n       'Density', 'ViewerNet_GCC', 'ViewerNet_ClusteringCoefficient',\n       'ViewerNet_AvgDegreeCentrality', 'ViewerNet_Connectivity',\n       'ViewerNet_Density', 'total_punimod_count', 'total_edumod_count',\n       'current_punimod_count', 'current_edumod_count'],\n      dtype='object')"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# import pyEDM\n",
-    "# X=dataframes[0]['current_moderation_count']\n",
-    "# Y=dataframes[0]['chat_count']\n",
-    "#\n",
-    "# ccm_result = pyEDM.CCM(dataX=X, dataY=Y, libSizes=[10, 20, 50], tau=1)\n",
-    "# print(ccm_result)"
+    "Ana_columns = ['chat_count', 'new_followers', 'new_subscription', 'new_support', 'new_bits', 'new_VIP', ]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "     video_id  group  one_min_session current_moderation_type  \\\n0  2021489975      1                1                     NaN   \n1  2021489975      1                2                     NaN   \n2  2021489975      1                3                     NaN   \n3  2021489975      1                4                     NaN   \n4  2021489975      1                5                     NaN   \n\n    first_moderation_type  total_moderation_count  \\\n0  Educational Moderation                       0   \n1  Educational Moderation                       0   \n2  Educational Moderation                       0   \n3  Educational Moderation                       0   \n4  Educational Moderation                       0   \n\n                                 chat_content_concat  chat_count  month  day  \\\n0  JOIN THE DISCORD SERVER!! :)💜 https://discord....          20      1    3   \n1  WE BACK! walk around the house yes  got the no...          10      1    3   \n2  or start oof the day goodnight lylaaa [qtsSip]...           6      1    3   \n3  yeah what about it idk whats been tracked tho ...           9      1    3   \n4  Yeah sadly can't play it on stream Not suppose...           8      1    3   \n\n   ...  Density ViewerNet_GCC  ViewerNet_ClusteringCoefficient  \\\n0  ...  0.00000             1                              0.0   \n1  ...  0.00000             1                              0.0   \n2  ...  0.00000             1                              0.0   \n3  ...  0.00000             1                              0.0   \n4  ...  0.02381             1                              0.0   \n\n   ViewerNet_AvgDegreeCentrality  ViewerNet_Connectivity  ViewerNet_Density  \\\n0                            0.0                       0                0.0   \n1                            0.0                       0                0.0   \n2                            0.0                       0                0.0   \n3                            0.0                       0                0.0   \n4                            0.0                       0                0.0   \n\n   total_punimod_count  total_edumod_count  current_punimod_count  \\\n0                    0                   0                      0   \n1                    0                   0                      0   \n2                    0                   0                      0   \n3                    0                   0                      0   \n4                    0                   0                      0   \n\n   current_edumod_count  \n0                     0  \n1                     0  \n2                     0  \n3                     0  \n4                     0  \n\n[5 rows x 91 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>video_id</th>\n      <th>group</th>\n      <th>one_min_session</th>\n      <th>current_moderation_type</th>\n      <th>first_moderation_type</th>\n      <th>total_moderation_count</th>\n      <th>chat_content_concat</th>\n      <th>chat_count</th>\n      <th>month</th>\n      <th>day</th>\n      <th>...</th>\n      <th>Density</th>\n      <th>ViewerNet_GCC</th>\n      <th>ViewerNet_ClusteringCoefficient</th>\n      <th>ViewerNet_AvgDegreeCentrality</th>\n      <th>ViewerNet_Connectivity</th>\n      <th>ViewerNet_Density</th>\n      <th>total_punimod_count</th>\n      <th>total_edumod_count</th>\n      <th>current_punimod_count</th>\n      <th>current_edumod_count</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2021489975</td>\n      <td>1</td>\n      <td>1</td>\n      <td>NaN</td>\n      <td>Educational Moderation</td>\n      <td>0</td>\n      <td>JOIN THE DISCORD SERVER!! :)💜 https://discord....</td>\n      <td>20</td>\n      <td>1</td>\n      <td>3</td>\n      <td>...</td>\n      <td>0.00000</td>\n      <td>1</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2021489975</td>\n      <td>1</td>\n      <td>2</td>\n      <td>NaN</td>\n      <td>Educational Moderation</td>\n      <td>0</td>\n      <td>WE BACK! walk around the house yes  got the no...</td>\n      <td>10</td>\n      <td>1</td>\n      <td>3</td>\n      <td>...</td>\n      <td>0.00000</td>\n      <td>1</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2021489975</td>\n      <td>1</td>\n      <td>3</td>\n      <td>NaN</td>\n      <td>Educational Moderation</td>\n      <td>0</td>\n      <td>or start oof the day goodnight lylaaa [qtsSip]...</td>\n      <td>6</td>\n      <td>1</td>\n      <td>3</td>\n      <td>...</td>\n      <td>0.00000</td>\n      <td>1</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2021489975</td>\n      <td>1</td>\n      <td>4</td>\n      <td>NaN</td>\n      <td>Educational Moderation</td>\n      <td>0</td>\n      <td>yeah what about it idk whats been tracked tho ...</td>\n      <td>9</td>\n      <td>1</td>\n      <td>3</td>\n      <td>...</td>\n      <td>0.00000</td>\n      <td>1</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2021489975</td>\n      <td>1</td>\n      <td>5</td>\n      <td>NaN</td>\n      <td>Educational Moderation</td>\n      <td>0</td>\n      <td>Yeah sadly can't play it on stream Not suppose...</td>\n      <td>8</td>\n      <td>1</td>\n      <td>3</td>\n      <td>...</td>\n      <td>0.02381</td>\n      <td>1</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 91 columns</p>\n</div>"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframes[0].head()"
    ],
    "metadata": {
     "collapsed": false,
